changed narrow screen menu position to sticky to ensure it appears over other content. Updated contact button styling so it is always visible

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -6,7 +6,6 @@
   align-items: center;
   justify-content: space-between;
   margin: 20px auto 0;
-  z-index: 1;
   width: var(--width);
   display: flex;
 
@@ -17,7 +16,6 @@
   flex-direction: column;
   align-items: flex-start;
   color: var(--color-text);
-  z-index: 1;
 }
 
 .title {
