--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -4,8 +4,7 @@
   outline: 1px solid red;
 } */
 .navbar {
-  /* position: sticky; */
-  
+  position: sticky;
   padding: 0;
   z-index: 2;
   width: 100%;
@@ -40,6 +39,7 @@
   text-decoration: none;
   text-align: center;
   min-width: 200px;
+  z-index: 1;
 }
 
 .contactBtn:focus{
@@ -49,7 +49,7 @@
 }
 
 .contactBtn:hover{
-  filter: brightness(1.2);
+  filter: brightness(1.3);
 }
 
 .topnav__close {
